--- a/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
+++ b/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
@@ -1,3 +1,8 @@
 console.pff.name = PfF
+
 item.pff.barrel.0.name = Barrel
+item.pff.veggiejuice.0.name = Veggie Juice
+item.pff.liquidpeat.0.name = Liquid Peat
+
 tile.pff.veggiejuice.name = Veggie Juice
+tile.pff.liquidpeat.name = Liquid Peat
