--- a/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
+++ b/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
@@ -3,6 +3,7 @@ console.pff.name = PfF
 item.pff.barrel.0.name = Barrel
 item.pff.veggiejuice.0.name = Veggie Juice
 item.pff.liquidpeat.0.name = Liquid Peat
+item.pff.ironbucket.0.name = Bucket
 
 tile.pff.veggiejuice.name = Veggie Juice
 tile.pff.liquidpeat.name = Liquid Peat
