--- a/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
+++ b/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
@@ -1,14 +1,10 @@
 console.pff.name = PfF
 
-item.pff.barrel.0.name = Barrel
-item.pff.capsule.0.name = Capsule
-item.pff.refractorycapsule.0.name = Capsule
+item.pff.barrel.name = Barrel
+item.pff.capsule.name = Capsule
 
-item.pff.veggiejuice.0.name = Veggie Juice
-item.pff.liquidpeat.0.name = Liquid Peat
+liquid.pff.veggiejuice.name = Veggie Juice
+liquid.pff.liquidpeat.name = Liquid Peat
 
-item.pff.woodenbucket.0.name = Wooden Bucket
+item.pff.woodenbucket.name = Wooden Bucket
 item.pff.bucket = Bucket
-
-tile.pff.veggiejuice.name = Veggie Juice
-tile.pff.liquidpeat.name = Liquid Peat
