Fixed Wooden Bucket recipe pattern. Fixed Wooden Bucket dumping for water. Added Blacksmithing Hammer and Iron rings. Barrel now has a recipe. Carrots and Potatos now squeeze into Veggie Juice.

--- a/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
+++ b/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
@@ -9,3 +9,6 @@ liquid.pff.liquidpeat.name = Liquid Peat
 item.pff.woodenbucket.name = Wooden Bucket
 item.pff.bucket = Bucket
 item.pff.can = Can
+
+item.pff.hammer.name = Blacksmithing Hammer
+item.pff.rings.name = Iron Ring
