Sugar and Cactus Coke are back. Retooled build script to be more universal. Spritesheet splitting.

--- a/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
+++ b/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
@@ -10,3 +10,8 @@ item.pff.can = Can
 
 item.pff.hammer.name = Blacksmithing Hammer
 item.pff.rings.name = Iron Ring
+
+item.pff.sugarcharcoal.name = Sugar Charcoal
+item.pff.sugarcoke.name = Sugar Coke
+item.pff.cactuscharcoal.name = Cactus Charcoal
+item.pff.cactuscoke.name = Cactus Coke
