--- a/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
+++ b/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
@@ -15,3 +15,5 @@ item.pff.sugarcharcoal.name = Sugar Charcoal
 item.pff.sugarcoke.name = Sugar Coke
 item.pff.cactuscharcoal.name = Cactus Charcoal
 item.pff.cactuscoke.name = Cactus Coke
+
+item.pff.mfr.poopframe.name = Poop Frame
