--- a/src/denoflionsx/PluginsforForestry/Lang/de_DE.lang
+++ b/src/denoflionsx/PluginsforForestry/Lang/de_DE.lang
@@ -15,3 +15,5 @@ item.pff.sugarcharcoal.name = Zuckerkohle
 item.pff.sugarcoke.name = Zuckerkoks
 item.pff.cactuscharcoal.name = Kaktuskohle
 item.pff.cactuscoke.name = Kaktuskoks
+
+item.pff.mfr.poopframe.name = Poop Frame
