--- a/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
+++ b/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
@@ -3,6 +3,7 @@ item.pff.capsule.name = Capsule
 
 liquid.pff.veggiejuice.name = Veggie Juice
 liquid.pff.liquidpeat.name = Liquid Peat
+liquid.pff.melonjuice.name = Melon Juice
 
 item.pff.woodenbucket.name = Wooden Bucket
 item.pff.bucket = Bucket
