--- a/src/denoflionsx/PluginsforForestry/Lang/de_DE.lang
+++ b/src/denoflionsx/PluginsforForestry/Lang/de_DE.lang
@@ -3,6 +3,7 @@ item.pff.capsule.name = Kapsel
 
 liquid.pff.veggiejuice.name = Gem\u00fcsesaft
 liquid.pff.liquidpeat.name = Fl\u00fcssigtorf
+liquid.pff.melonjuice.name = Melonensaft
 
 item.pff.woodenbucket.name = Holzeimer
 item.pff.bucket = Eimer
