Allow overrides to lang.
Added holiday stuff to master lang.
Working on Thanksgiving.

--- a/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
+++ b/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
@@ -5,6 +5,8 @@ liquid.pff.liquidpeat.name = Liquid Peat
 liquid.pff.melonjuice.name = Melon Juice
 
 item.pff.woodenbucket.name = Wooden Bucket
+item.pff.woodenbucket.halloween.name = Pumpkin Bucket
+item.pff.woodenbucket.thanksgiving.name = Pilgrim Bucket
 
 item.pff.hammer.name = Blacksmithing Hammer
 item.pff.rings.name = Iron Ring
