Lang addition for Valentines day.

--- a/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
+++ b/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
@@ -8,6 +8,7 @@ item.pff.woodenbucket.name = Wooden Bucket
 item.pff.woodenbucket.halloween.name = Pumpkin Bucket
 item.pff.woodenbucket.thanksgiving.name = Pilgrim Bucket
 item.pff.woodenbucket.christmas.name = Christmas Bucket
+item.pff.woodenbucket.valentine.name = Love Bucket
 
 item.pff.hammer.name = Blacksmithing Hammer
 item.pff.rings.name = Iron Ring
