Delivering up some freedom.

--- a/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
+++ b/src/denoflionsx/PluginsforForestry/Lang/en_US.lang
@@ -10,6 +10,7 @@ item.pff.woodenbucket.thanksgiving.name = Pilgrim Bucket
 item.pff.woodenbucket.christmas.name = Christmas Bucket
 item.pff.woodenbucket.valentine.name = Love Bucket
 item.pff.woodenbucket.spring.name = Spring Bucket
+item.pff.woodenbucket.murica.name = Freedom Bucket
 
 item.pff.hammer.name = Blacksmithing Hammer
 item.pff.rings.name = Iron Ring
